# personal-site-public

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  generate-code.sh  index.html  landing.html  package-lock.json  package.json  vite.config.js
admin-frontend/: index.html
admin-frontend/src/: App.css  App.jsx  main.jsx
admin-frontend/src/components/: Layout.css  Layout.jsx
admin-frontend/src/contexts/: AuthContext.jsx
admin-frontend/src/pages/: AccessCodes.css  AccessCodes.jsx  AccessLogs.css  AccessLogs.jsx  Dashboard.css  Dashboard.jsx  Login.jsx  Register.jsx  Settings.css  Settings.jsx  VerifyEmail.jsx
assets/: main.js  styles.css
assets/icons/: README.md
scripts/: wait-for-db.sh
src/: app.rs  database.rs  email.rs  errors.rs  lib.rs  main.rs  s3.rs  security.rs  settings.rs
src/admin/: access_codes.rs  access_logs.rs  auth.rs  mod.rs  pagination.rs  routes.rs  settings.rs
src/entities/: access_code.rs  access_log.rs  admin_user.rs  mod.rs  setting.rs
src/middleware/: access_log.rs  admin_auth.rs  mod.rs  rate_limit.rs  security.rs
src/migration/: m20250119_000001_create_access_log.rs  m20250120_000001_drop_mac_address.rs  m20250121_000001_create_admin_users.rs  m20250122_000001_create_access_codes.rs  m20250123_000001_add_usage_count.rs  m20250124_000001_create_settings.rs  mod.rs
src/tests/: database_tests.rs  middleware_tests.rs  mod.rs  security_tests.rs
