[package]
name = "personal-site"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.225", features = ["derive"] }
anyhow = "1.0.99"
