[package]
name = "personal-site"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "with-time", "with-uuid", "macros"] }
sea-orm-migration = "1.1.17"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
thiserror = "2.0.17"
argon2 = "0.5.3"
rand = "0.9.2"
hex = "0.4.3"
async-trait = "0.1.89"
# Admin authentication dependencies
axum-login = "0.18"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
# AWS services
aws-config = "1.8.8"
aws-sdk-sesv2 = "1.100"
aws-sdk-s3 = "1.108"
# Time for session expiry
time = "0.3.44"

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.23"
serial_test = "3.2.0"
axum-test = "18.1.0"
